inventory/Manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  namespace: inventory
spec:
  selector:
      matchLabels:
        app: inventory
  replicas: 1
  template:
      metadata:
        labels:
            app: inventory
      spec:
        containers:
        - name: inventory
          image: hakureianna/inventory
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 5000
              path: /healthz
          livenessProbe:
            httpGet:
              port: 5000
              path: /healthz
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: inventory
spec:   
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  selector:
    app: inventory
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: inventory
  namespace: inventory
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - inventory.52.170.169.207.nip.io
    secretName: orders-tls-secret
  rules:
  - host: inventory.52.170.169.207.nip.io
    http:
      paths:
      - backend:
          serviceName: inventory
          servicePort: 80
        path: /
